--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,7 @@ services:
       - Qnote_network
     volumes:
       - ./:/app
+      - /app/node_modules
     environment:
       - NODE_ENV=production
       - DATABASE_URL=mysql://${DB_USER}:${DB_PASSWORD}@mysql-server:3306/${DB_NAME}
