feat: 개발 환경 이주 및 일기/태그 모듈 추가
- docker-compose 및 nginx 설정 파일 추가/수정
- 일기(diary) 관련 모듈, 서비스, DTO, 엔티티, 인터페이스 추가
- 태그(tags) 관련 모듈, 서비스, 엔티티, 인터페이스 추가
- 기존 chat, auth, openai, users 관련 로직 일부 수정

※ 급한 개발 환경 이주를 위해 변경사항을 우선 저장함

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,23 @@
 services:
+  nginx:
+    image: nginx:latest
+    container_name: nginx-proxy
+    ports:
+      - '443:443'
+    volumes:
+      - ./nginx:/etc/nginx
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    depends_on:
+      - nestjs-server
+    networks:
+      - Qnote_network
+
   nestjs-server:
     build: ./
     container_name: nestjs-server
-    ports:
-      - '3000:3000'
+    # ports:
+    #   - '3000:3000'
     networks:
       - Qnote_network
     volumes:
@@ -23,8 +37,8 @@ services:
       MYSQL_DATABASE: ${DB_NAME}
       MYSQL_USER: ${DB_USER}
       MYSQL_PASSWORD: ${DB_PASSWORD}
-    ports:
-      - '3306:3306'
+    # ports:
+    #   - '3306:3306'
     networks:
       - Qnote_network
 
