--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,17 @@
 services:
+  certbot:
+    build:
+      context: ./certbot
+    env_file:
+      - ./certbot/.env
+    volumes:
+      - ./certbot/www:/var/www/certbot
+      - ./certbot/conf:/etc/letsencrypt
   nginx:
     image: nginx:latest
     container_name: nginx-proxy
     ports:
+      - '80:80'
       - '443:443'
     volumes:
       - ./nginx:/etc/nginx
