--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -1,6 +1,8 @@
 services:
   nestjs-server:
-    build: ./
+    build:
+      context: ./
+      dockerfile: dockerfile.dev
     container_name: nestjs-server
     ports:
       - '3000:3000'
@@ -11,7 +13,7 @@ services:
       - /app/node_modules
     environment:
       - NODE_ENV=dev
-      - DATABASE_URL=mysql://${DB_USER}:${DB_PASSWORD}@mysql-server:3306/${DB_NAME}
+      - MYSQL_DATABASE_SYNCHRONIZE=true
     depends_on:
       - mysql-server
 
