--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -23,18 +23,17 @@ services:
       - Qnote_network
 
   nestjs-server:
-    build: ./
+    build:
+      context: ./
+      dockerfile: dockerfile.prod
     container_name: nestjs-server
     # ports:
     #   - '3000:3000'
     networks:
       - Qnote_network
-    volumes:
-      - ./:/app
-      - /app/node_modules
     environment:
       - NODE_ENV=production
-      - DATABASE_URL=mysql://${DB_USER}:${DB_PASSWORD}@mysql-server:3306/${DB_NAME}
+      - MYSQL_DATABASE_SYNCHRONIZE=false
     depends_on:
       - mysql-server
 
