--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -2,6 +2,7 @@ version: '3.7'
 
 services:
   certbot:
+    container_name: certbot/certbot
     build:
       context: ./certbot
     env_file:
@@ -9,6 +10,7 @@ services:
     volumes:
       - ./certbot/www:/var/www/certbot
       - ./certbot/conf:/etc/letsencrypt
+    restart: unless-stopped
   nginx:
     image: nginx:latest
     container_name: nginx-proxy
@@ -22,7 +24,8 @@ services:
     depends_on:
       - nestjs-server
     networks:
-      - Qnote_network
+      - backend
+    restart: always
 
   nestjs-server:
     build:
@@ -38,6 +41,7 @@ services:
       - MYSQL_DATABASE_SYNCHRONIZE=false
     depends_on:
       - mysql-server
+    restart: always
 
   mysql-server:
     image: mysql:latest
@@ -50,8 +54,8 @@ services:
     # ports:
     #   - '3306:3306'
     networks:
-      - Qnote_network
+      - backend
 
 networks:
-  Qnote_network:
+  backend:
     driver: bridge
