--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -35,7 +35,7 @@ services:
     # ports:
     #   - '3000:3000'
     networks:
-      - Qnote_network
+      - backend
     environment:
       - NODE_ENV=production
       - MYSQL_DATABASE_SYNCHRONIZE=false
