--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -5,11 +5,13 @@ services:
     container_name: certbot/certbot
     build:
       context: ./certbot
-    env_file:
-      - ./certbot/.env
     volumes:
       - ./certbot/www:/var/www/certbot
       - ./certbot/conf:/etc/letsencrypt
+
+    environment:
+      - CERTBOT_EMAIL=${CERTBOT_EMAIL}
+      - CERTBOT_DOMAIN=${CERTBOT_DOMAIN}
     restart: unless-stopped
   nginx:
     image: nginx:latest
