--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   certbot:
-    container_name: certbot/certbot
+    container_name: certbot
     build:
       context: ./certbot
     volumes:
@@ -12,7 +12,6 @@ services:
     environment:
       - CERTBOT_EMAIL=${CERTBOT_EMAIL}
       - CERTBOT_DOMAIN=${CERTBOT_DOMAIN}
-    restart: unless-stopped
   nginx:
     image: nginx:latest
     container_name: nginx-proxy
@@ -20,8 +19,9 @@ services:
       - '80:80'
       - '443:443'
     volumes:
-      - ./nginx:/etc/nginx
-      - ./certbot/conf:/etc/letsencrypt
+      - ./etc/nginx/conf.d:/etc/nginx
+      #읽기전용 : ro
+      - ./certbot/conf:/etc/letsencrypt:ro
       - ./certbot/www:/var/www/certbot
     depends_on:
       - nestjs-server
@@ -44,6 +44,8 @@ services:
     depends_on:
       - mysql-server
     restart: always
+    env_file:
+      - .env
 
   mysql-server:
     image: mysql:latest
