test(openai): getDiaryInfoByContent 함수의 한글 및 영어 일기 요약 테스트 추가
OpenAI API를 이용한 일기 요약 기능에 대한 테스트 코드를 작성했습니다.
한글과 영어 일기를 각각 입력했을 때 JSON 형태로 요약 응답이 오는지 검증하며,
영어 일기의 경우 반환된 `content`가 실제로 영어로 구성되어 있는지도 확인합니다.

또한 .env에서 환경변수를 정상적으로 불러오는지에 대한 간단한 테스트도 포함되어 있습니다.

--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -13,7 +13,7 @@ services:
       - /app/node_modules
     environment:
       - NODE_ENV=dev
-      - MYSQL_DATABASE_SYNCHRONIZE=true
+      - MYSQL_DATABASE_SYNCHRONIZE=false
     depends_on:
       - mysql-server
 
@@ -25,6 +25,12 @@ services:
       MYSQL_DATABASE: ${DB_NAME}
       MYSQL_USER: ${DB_USER}
       MYSQL_PASSWORD: ${DB_PASSWORD}
+      TZ: Asia/Seoul
+    command: >
+      --character-set-server=utf8mb4
+      --collation-server=utf8mb4_unicode_ci
+      --skip-character-set-client-handshake
+
     ports:
       - '3306:3306'
     networks:
