--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "migration:generate": "typeorm migration:generate -d dist/src/data-source.js -o dist/migrations",
-    "migration:run": "typeorm migration:run -d dist/src/data-source.js"
+    "migration:run": "typeorm migration:run -d dist/src/data-source.js",
+    "typeorm": "node -r ts-node/register ./node_modules/typeorm/cli.js",
+    "typeorm:d": "node -r ts-node/register ./node_modules/typeorm/cli.js -d ormconfig.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
