--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,11 @@
     "paths": {
       "src/*": ["src/*"]
     }
-  }
+  },
+
+  "include": [
+    "src/**/*",
+    "src/data-source.ts"
+  ]
+
 }
