--- a/docker-compose.ana.yaml
+++ b/docker-compose.ana.yaml
@@ -9,9 +9,10 @@ services:
       dockerfile: dockerfile.prod
     container_name: qnote-nestjs
     ports:
-      - '20001:3000'
+      - '20001:20001'
     networks:
       - hhs_network
+      - dmoj_nginx_network
     environment:
       - NODE_ENV=production
       - MYSQL_DATABASE_SYNCHRONIZE=false
@@ -41,3 +42,5 @@ services:
 networks:
   hhs_network:
     driver: bridge
+  dmoj_nginx_network:
+    external: true
