Swagger 문서화 모듈 도입 이전, 최종 서버 머지 요청 (#3)
* migrations 파일 생성 및 DB 초기화

* fix(user-password): change user-based where clauses to use user.id instead

Previously, queries using `where: { user }` failed to match
due to entity instance mismatch. Replaced them with `user.id`
for reliable DB querying.

* feat(user): implement user creation with email duplication check and add user listing endpoint

* fix(Prompt) : 더 강력하고 비싼 Prompt 요청 api 수정.

    - prompt 입력의 경량화를 위해, 입력을 줄였더니, AI가 통제를 벗어난
      응답을 함.

* test(openai): getDiaryInfoByContent 함수의 한글 및 영어 일기 요약 테스트 추가

OpenAI API를 이용한 일기 요약 기능에 대한 테스트 코드를 작성했습니다.
한글과 영어 일기를 각각 입력했을 때 JSON 형태로 요약 응답이 오는지 검증하며,
영어 일기의 경우 반환된 `content`가 실제로 영어로 구성되어 있는지도 확인합니다.

또한 .env에서 환경변수를 정상적으로 불러오는지에 대한 간단한 테스트도 포함되어 있습니다.

* feat(env): add production environment support and configuration

* - 동방 서버 이전

* feat(prompt), chore(config): 다이어리 어시스턴트 프롬프트 개선, ana.yaml 서버 배포용으로 설정 수정

- 항상 하나의 JSON 객체만 반환하도록 명시
- 모호하거나 추상적인 질문을 피하고, 직관적으로 대답할 수 있는 구체적인 질문만 하도록 지침 추가
- 사용자의 언어와 어투를 따라가야 한다는 조건을 더욱 명확히 기술

- 서버 실행에 적합하도록 환경 설정 변경
- 기존 설정 중 불필요한 부분 정리 및 재구성

* feat: redirect root path to GitHub project page

* fix : 리다이렉트 오류 수정 및 앱 서비스 기능 삭제

* fix : 로그인 이슈, IPayLoad 이슈, API 추가.

    - 그동안 트래픽이 한 계정으로 쏠리는 이유와, 여러 API가 먹통이 되는
      현상이 있었는데, payload anotation이 작동을 잘 안하고 있었음.
    - validate함수에서 잘 못 넘겨주고 있었고, user 객체애 대해 생성이
      이상하게 되고잇었음. fix.
    - 내부서버테스트를 위한 임시 커밋

* fix(user) : user api 쪽, UseGuard 로직 추가

    - useGuard로직이 없어, payload가 undefined 되는 로직이 있었고,
      추가하여 수정하였습니다.

* fix(diaries) : diary api 의 payload 사용 부분 fix

    - payload 에서 잘못된 정보를 가져와, 사용자의 id를 매개변수로
      검색하는 로직 수정

--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -25,6 +25,8 @@ services:
       MYSQL_DATABASE: ${DB_NAME}
       MYSQL_USER: ${DB_USER}
       MYSQL_PASSWORD: ${DB_PASSWORD}
+      TZ: Asia/Seoul
+
     ports:
       - '3306:3306'
     networks:
