--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -57,6 +57,9 @@ services:
       MYSQL_PASSWORD: ${DB_PASSWORD}
     # ports:
     #   - '3306:3306'
+
+    volumes:
+      - ./mysql_data:/var/lib/mysql
     networks:
       - backend
 
