--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,15 @@
     "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "noFallthroughCasesInSwitch": false
-  }
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "src/*": ["src/*"]
+    }
+  },
+
+  "include": [
+    "src/**/*",
+    "src/data-source.ts"
+  ]
+
 }
