feat(docker) : docker enviorment에 nestJS 리스닝 포트 명시
    - docker-compose.ana.yaml : PORT=20001
    - docker-compose.prod.yaml : PORT=20001
    - docker-compose.dev.yaml : PORT=3000

--- a/docker-compose.ana.yaml
+++ b/docker-compose.ana.yaml
@@ -16,6 +16,7 @@ services:
     environment:
       - NODE_ENV=production
       - MYSQL_DATABASE_SYNCHRONIZE=false
+      - PORT=20001
     depends_on:
       - mysql-server
     restart: always
