--- a/docker-compose.ana.yaml
+++ b/docker-compose.ana.yaml
@@ -16,6 +16,8 @@ services:
     environment:
       - NODE_ENV=production
       - MYSQL_DATABASE_SYNCHRONIZE=false
+      - PORT=20001
+
     depends_on:
       - mysql-server
     restart: always
